[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
async_fn_traits = "0.1.1"
futures = "0.3.30"
heck = "0.5.0"
log = "0.4.22"
mime_guess = "2.0.5"
proc-macro2 = "1.0.86"
quote = "1.0.37"
serde_json = "1.0.127"
syn = "2.0.75"
tokio = { version = "1.39.3", features = ["full"] }
walkdir = "2.5.0"

[dev-dependencies]
bincode = "1.3.3"
bytes = "1.7.1"
anyhow = "1.0.86"
serde = { version = "1.0.209", features = ["derive"] }
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.7", features = ["full"] }
http-body-util = "0.1.2"
