[package]
name = "router"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async_fn_traits = "0.1.1"
bytes = "1.7.1"
futures = "0.3.30"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.7", features = ["full"] }
log = "0.4.22"
mime_guess = "2.0.5"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
walkdir = "2.5.0"

[dependencies.macros]
path = "../macros"
