[package]
name = "router"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async_fn_traits = "0.1.1"
bytes = "1.7.1"
futures = "0.3.30"
futures-signals = "0.3.34"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.7", features = ["full"] }
lazy_static = "1.5.0"
log = "0.4.22"
mime_guess = "2.0.5"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
walkdir = "2.5.0"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"

[dependencies.web-sys]
version = "0.3.4"
features = [
  "Blob",
  "Cache",
  "CacheStorage",
  "Clipboard",
  "console",
  "DomRect",
  "Document",
  "DomRect",
  "Event",
  "EventTarget",
  "File",
  "FileList",
  "FileReader",
  "HtmlAnchorElement",
  "HtmlButtonElement",
  "HtmlCanvasElement",
  "HtmlCollection",
  "HtmlDetailsElement",
  "HtmlDivElement",
  "HtmlEmbedElement",
  "HtmlHeadingElement",
  "HtmlIFrameElement",
  "HtmlFormElement",
  "HtmlImageElement",
  "HtmlInputElement",
  "HtmlObjectElement",
  "HtmlOptionElement",
  "HtmlParagraphElement",
  "HtmlProgressElement",
  "HtmlSelectElement",
  "HtmlSpanElement",
  "HtmlTableCellElement",
  "HtmlTableElement",
  "HtmlTableRowElement",
  "HtmlTableSectionElement",
  "Navigator",
  "ReadableStream",
  "ReadableStreamDefaultReader",
  "ReadableStreamReadResult",
  "ScrollBehavior",
  "ScrollIntoViewOptions",
  "ScrollLogicalPosition",
  "ScrollToOptions",
  "VisibilityState",
  "Window",
  "Worker",
  "WorkerOptions",
  "WorkerType",
]


[dependencies.macros]
path = "../macros"
